# sourcewise-dawah-agent

./: .env.example  .gitignore  Dockerfile  README.md  pyproject.toml
app/: __init__.py  agent.py  cli.py  main.py  retrieval.py  schemas.py  tools.py
data/sources/: community-service.md  community-service.txt  event-promotion.md  event-promotion.txt  sincere-speech.md  sincere-speech.txt  student-productivity.md  student-productivity.txt
docs/github-actions/: ci.yml
tests/: test_agent.py  test_retrieval.py
